Fix too high table panels.

--- a/public/sass/components/_panel_table.scss
+++ b/public/sass/components/_panel_table.scss
@@ -5,6 +5,10 @@
   .panel-title-container {
     padding-bottom: 4px;
   }
+
+  .panel-header.grid-drag-handle {
+    margin-bottom: -3px;
+  }
 }
 
 .table-panel-scroll {
